Resolvendo os testes de integração

--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
-		
-		
+
+
+		<dependency>
+			<groupId>com.devsuperior</groupId>
+			<artifactId>dscatalog</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
